--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -14,7 +14,7 @@
 
     <script>
         userId = @(((ClaimsIdentity)User.Identity).Claims
-            .FirstOrDefault(x => x.Type == ClaimTypes.NameIdentifier).Value);
+.FirstOrDefault(x => x.Type == ClaimTypes.NameIdentifier).Value);
     </script>
 
 
@@ -30,7 +30,7 @@
                 <h4 class="modal-title" ng-model="modalHeader">{{modalHeader}}</h4>
             </div>
             <div class="modal-body">
-                <input type="text" ng-model="list.Name" placeholder="Name" id="name-list" />
+                <input type="text" ng-model="list.Name" placeholder="Name" id="name-list" autofocus />
             </div>
             <div class="modal-footer">
                 <button class="btn modal-btn" type="button" ng-click="ok()">OK</button>
@@ -42,13 +42,21 @@
             <div class="modal-header">
                 <h4 class="modal-title">Update your profile</h4>
             </div>
-            <div class="modal-body">
-                <input type="text" ng-model="user.Name" placeholder="Name" id="name-list" />
+
+            <div id="uploadForm" enctype="multipart/form-data" @*ng-model="photo = user.PhotoPath ? user.PhotoPath : 'default.png'"*@>
+                <div class="modal-body">
+                    <input type="text" ng-model="user.Name" placeholder="Name" id="name-list" autofocus />
+
+                    <img ng-src="@Url.Content("~/Files/"){{user.PhotoPath}}" alt="myimage" />
+                    <input type="file" name="file" value="Upload profile image" accept="image/*" id="file">
+                    <span class="error">{{FileInvalidMessage}}</span>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn modal-btn" type="button" ng-click="ok()">OK</button>
+                    <button class="btn modal-btn" type="button" ng-click="cancel()">Cancel</button>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button class="btn modal-btn" type="button" ng-click="ok()">OK</button>
-                <button class="btn modal-btn" type="button" ng-click="cancel()">Cancel</button>
-            </div>
+
         </script>
 
 
@@ -112,15 +120,9 @@
                     <div id="tasks-scroll">
                         <div id="add-task">
                             <form class="icon-container">
-                                <div class="col-md-10 col-sm-9 col-xs-8 pull-left">
+                                <div class="col-md-12 col-sm-9 col-xs-8 pull-left">
                                     <img src="~/Content/plus-white.png" class="item-icons">
                                     <input type="text" placeholder="Add a to-do..." id="new-task" ng-model="todoText" ng-keydown="$event.keyCode == 13 && addToDoItem()">
-                                </div>
-                                <div class="col-md-2 col-sm-3 col-xs-4">
-                                    <div class="pull-right">
-                                        <img src="~/Content/calendar.png" alt="Calendar" class="item-icons">
-                                        <img src="~/Content/border-star.png" alt="Star" class="item-icons">
-                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -131,8 +133,10 @@
                     <ul>
                         <li ng-repeat="todo in (toDoItems | filter : {IsCompleted: 'false'})" ng-dblClick="showDescription(todo)" class="item">
                             <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
-                                <input type="checkbox" ng-click="toggleCompleted(todo)">
-                                <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
+                                <div class="text-overflow">
+                                    <input type="checkbox" ng-click="toggleCompleted(todo)">
+                                    <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
+                                </div>
                             </div>
 
                             <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
@@ -150,8 +154,11 @@
                             <ul>
                                 <li ng-repeat="todo in toDoItems | filter: {IsCompleted: 'true'}" ng-dblClick="showDescription(todo)" class="item-done">
                                     <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
-                                        <img src="~/Content/check.png" alt="Check" class="item-icons" ng-click="toggleCompleted(todo)">
-                                        <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
+                                        <div class="text-overflow">
+                                            <input type="checkbox" class="item-icons" ng-click="toggleCompleted(todo)" ng-model="todo.IsCompleted">
+
+                                            <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
+                                        </div>
                                     </div>
 
                                     <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
@@ -171,8 +178,8 @@
             <aside class="col-md-3" id="item-info" ng-controller="DescriptionController">
                 <div class="update-elem">
                     <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
-                        <input type="checkbox">
-                        <input type="text" ng-model="getTodo().Text" value="{{getTodo().Text}}" class="text-update" />
+                        <input type="checkbox" ng-model="getTodo().IsCompleted">
+                        <input type="text" ng-model="getTodo().Text" value="{{getTodo().Text}}" class="text-update text-overflow" />
                     </div>
                     <div class="col-md-2 col-sm-3 col-xs-3">
                         <img src="~/Content/star-border-black.png" alt="Star" class="item-icons">
@@ -180,22 +187,22 @@
                 </div>
                 <div id="description-scroll">
                     <div class="update-elem">
-                        <div class="col-md-10 col-sm-9 col-xs-9 pull-left"  >
+                        <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
                             <img src="~/Content/calendar-black.png" alt="Calendar" class="item-icons" ng-click="openCalendar()">
-                            <input ng-model="tempDate" ng-readonly="true" placeholder="Set a due date" value="{{tempDate}}" class="text-update" uib-datepicker-popup is-open="popup.opened" datepicker-options="dateOptions" ng-required="false" close-text="Close"/>
+                            <input ng-model="tempDate" ng-readonly="true" placeholder="Set a due date" value="{{tempDate}}" class="text-update" uib-datepicker-popup is-open="popup.opened" datepicker-options="dateOptions" ng-required="false" close-text="Close" />
                         </div>
                     </div>
 
                     <div class="update-elem" id="textarea-container">
-                        <div class="col-md-10 col-sm-9 col-xs-9 pull-left" >
+                        <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
                             <img src="~/Content/pen-black.png" alt="Note" class="item-icons">
                             <div id="test">
                                 <textarea ng-model="getTodo().Note" placeholder="Add a note" class="text-update note"></textarea>
                             </div>
                         </div>
                         @*<div class="col-md-2 col-sm-3 col-xs-3" id="close-icon">
-                            <img src="~/Content/clear.png" alt="Star" class="item-icons">
-                        </div>*@
+                                <img src="~/Content/clear.png" alt="Star" class="item-icons">
+                            </div>*@
                     </div>
 
                     <div>
