--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Home/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
             @Html.ActionLink("Sign In", "LogOn", "Account", null, new { id = "btn-signin" })
         </div>
         <div class="col-md-2 col-xs-8">
-            @Html.ActionLink("Create a free account", "Register", "Account", null, new { @class = "btn" })
+            @Html.ActionLink("Create a free account", "Register", "Account", null, new { @class = "btn-create-account" })
         </div>
     </nav>
 
