--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
@@ -472,6 +472,15 @@ p.subline {
     margin: 0.5em 0 0 0;
 }
 
+.item-icons:hover, .close-icon:hover {
+    -webkit-transform: scale(1.2);
+	transform: scale(1.2);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+    /*-webkit-box-shadow: 3px -3px 3px #111;
+    box-shadow: 3px -3px 3px #111;*/  
+}
+
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
