--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -30,7 +30,7 @@
                 <h4 class="modal-title" ng-model="modalHeader">{{modalHeader}}</h4>
             </div>
             <div class="modal-body">
-                <input type="text" ng-model="list.Name" placeholder="Name" id="name-list" autofocus />
+                <input type="text" ng-model="list.Name" placeholder="Name" id="name-list" autofocus ng-keydown="$event.keyCode == 13 && ok()" />
             </div>
             <div class="modal-footer">
                 <button class="btn modal-btn" type="button" ng-click="ok()">OK</button>
@@ -202,10 +202,10 @@
                     </div>
                 </div>
                 <div id="description-scroll">
-                    <div class="update-elem">
+                    <div class="update-elem" ng-click="openCalendar()">
                         <div class="col-md-12 col-sm-9 col-xs-9 pull-left">
-                            <img src="~/Content/calendar-black.png" alt="Calendar" class="item-icons update" ng-click="openCalendar()">
-                            <input ng-model="tempDate" ng-readonly="true" placeholder="Set a due date" value="{{tempDate}}" class="text-update" uib-datepicker-popup is-open="popup.opened" datepicker-options="dateOptions" ng-required="false" close-text="Close" />
+                            <img src="~/Content/calendar-black.png" alt="Calendar" class="item-icons update" >
+                            <input ng-model="tempDate" ng-change="forceUpdate(tempDate)" ng-readonly="true" placeholder="Set a due date" value="{{tempDate}}" class="text-update" uib-datepicker-popup is-open="popup.opened" datepicker-options="dateOptions" ng-required="false" close-text="Close" />
                         </div>
                     </div>
 
