--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
@@ -21,6 +21,16 @@
     border-radius: 20px;
 }
 
+#avatar-image {
+    width: 200px;
+    height: 200px;
+}
+
+#profile-image {
+    width: 40px;
+    height: 40px;
+}
+
 #lists {
     transition: width 100ms ease;
     background: #f7f7f7;
