--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Error/Error404.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Error/Error404.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
+    Response.StatusCode = 404;
 }
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,8 +10,8 @@
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h1>Error 404.</h1>
+        <h2>NOT FOUND</h2>
     </hgroup>
 </body>
 </html>
