fix routing bug and file upload bug

--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -45,7 +45,7 @@
 
             <form name="form">
                 <div class="col-md-3">
-                    <img id="avatar-image" ngf-src="file ? file : (user.PhotoPath ? '/Files/' + user.PhotoPath : '/Files/default.png')" alt="myimage" />
+                    <img id="avatar-image" ngf-src="file ? file : (user.PhotoPath ? '/WebApp/Files/' + user.PhotoPath : '/WebApp/Files/default.png')" alt="myimage" />
                 </div>
 
                 <div class="col-md-9">
